# fairy-slipper

./: .coveragerc  .gitignore  .gitreview  .travis.yml  CONTRIBUTING.rst  Gruntfile.js  HACKING.rst  MANIFEST.in  README.rst  bower.json  config.py  fairy_slipper.wsgi  karma.conf.js  migrate.sh  openstack-common.conf  package.json  requirements.txt  run_server.sh  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  tempest.rst  usage.rst
fairy_slipper/: __init__.py  app.py  app_routes.py  cinder.py  hooks.py  rest.py  version.py  wsgi.py
fairy_slipper/cmd/: create_yaml_parameters.py  docbkx_to_json.py  swagger_and_markdown.py  swagger_to_rst.py  swagger_to_rst_html.py  tempest_log.py  wadl_to_swagger.py  wadl_to_swagger_valid.py
fairy_slipper/controllers/: __init__.py  root.py  routes.py  routes_inspector.py
fairy_slipper/templates/: index.html  layout.html
fairy_slipper/tests/: __init__.py  config.py  test_fairy_slipper.py  test_functional.py  test_rest.py  test_units.py
fairy_slipper/tests/api_doc_fixture/: index.json
fairy_slipper/tests/cmd/: ch_test-link.xml  ch_test-listitems.xml  ch_test-table.xml  ch_test-v1.xml  ch_test-v3.xml  test_docbkx_to_json.py  test_tempest.py  test_wadl_to_swagger.py  (+1 more)
public/: app.css  app.js  index.html  swagger.json
public/browser/: browser.html  browser.js  by-path.html  by-tag.html  index.html  index.js  swagger-example.html  swagger-method.html  swagger-schema.html  undocumented-operation.html  url.js
releasenotes/notes/: add-releasenotes-06b3b47c12950a37.yaml  initial-release-efb4398e.yaml  more-error-migrations-6b45654a.yaml  update-method-names-a364fc3b.yaml
releasenotes/source/: conf.py  index.rst
tools/: colorizer.py  docbkx_to_json.py  swagger_to_rst.py  wadl_to_swagger.py  with_venv.sh
(+2266 files in other folders)
