[metadata]
name = fairy-slipper
summary = A project to make OpenStack API's self documententing.
description-file =
    README.rst
author = OpenStack
author-email = russell.sim@gmail.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    fairy_slipper

[entry_points]
console_scripts =
    fairy-slipper-docbkx-to-json = fairy_slipper.cmd.docbkx_to_json:main
    fairy-slipper-swagger-to-rst = fairy_slipper.cmd.swagger_to_rst:main
    fairy-slipper-wadl-to-swagger = fairy_slipper.cmd.wadl_to_swagger:main
    fairy-slipper-wadl-to-swagger-valid = fairy_slipper.cmd.wadl_to_swagger_valid:main
    fairy-slipper-tempest-log = fairy_slipper.cmd.tempest_log:main
    fairy-slipper-swagger-to-rst-html = fairy_slipper.cmd.swagger_to_rst_html:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = fairy_slipper/locale
domain = fairy-slipper

[update_catalog]
domain = fairy-slipper
output_dir = fairy_slipper/locale
input_file = fairy_slipper/locale/fairy-slipper.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = fairy_slipper/locale/fairy-slipper.pot
